First commited as before_14662_rev2